--- a/ShoesAdmin/src/app/components/index/index.component.html
+++ b/ShoesAdmin/src/app/components/index/index.component.html
@@ -59,14 +59,20 @@
                         </a>
                         <ul class="menu-content">
                             <li>
-                                <a routerLink="form-user" class="menu-item">User</a>
+                                <a routerLink="form-user" class="menu-item">Chi tiết nhân viên</a>
                             </li>
                             <li>
-                                <a routerLink="form-product" class="menu-item">Product</a>
+                                <a routerLink="form-product" class="menu-item">Chi tiết sản phẩm</a>
                             </li>
                             <li>
-                                <a routerLink="form-customer" class="menu-item">Customize</a>
+                                <a routerLink="form-customer" class="menu-item">Chi tiết khách hàng</a>
                             </li>
+                            <li>
+                                <a routerLink="form-hoadon" class="menu-item">Chi tiết Hóa đơn</a>
+                            </li>
+                            <li>
+                                <a routerLink="chitiet-sp" class="menu-item">Chi tiết sp</a>
+                             </li>
                         </ul>
                     </li>
                     <li class="has-sub nav-item">
