--- a/ShoesAdmin/src/app/components/invoice/invoice.component.html
+++ b/ShoesAdmin/src/app/components/invoice/invoice.component.html
@@ -14,18 +14,18 @@
             <div class="col-6 text-left">
               <img src="../assets/app-assets/img/logos/logo-big-black.png" alt="company logo" class="mb-2" width="70">
               <ul class="px-0 list-unstyled">
-                <li class="text-bold-800">Pixinvent Creative Studio</li>
-                <li>4025 Oak Avenue,</li>
-                <li>Melbourne,</li>
-                <li>Florida 32940,</li>
-                <li>USA</li>
+                <li class="text-bold-800">Công Ty TNHH 2 Thành Viên</li>
+                <li>4128 Lê Văn Sỹ,</li>
+                <li>Phường 8,</li>
+                <li>Quận Phú Nhuận,</li>
+                <li>TP.HCM</li>
               </ul>
             </div>
             <div class="col-6 text-right">
-              <h2>INVOICE</h2>
-              <p class="pb-3"># INV-001001</p>
+              <h2>HÓA ĐƠN</h2>
+              <p class="pb-3">Mã Hóa Đơn:</p>
               <ul class="px-0 list-unstyled">
-                <li>Balance Due</li>
+                <li>Tổng Tiền Thanh Toán: </li>
                 <li class="lead text-bold-800">$ 12,000.00</li>
               </ul>
             </div>
@@ -34,19 +34,19 @@
           <!-- Invoice Customer Details -->
           <div id="invoice-customer-details" class="row pt-2">
             <div class="col-sm-12 text-left">
-              <p class="text-muted">Bill To</p>
+              <p class="text-muted">Thông tin Khách hàng:</p>
             </div>
             <div class="col-6 text-left">
               <ul class="px-0 list-unstyled">
-                <li class="text-bold-800">Mr. Bret Lezama</li>
-                <li>4879 Westfall Avenue,</li>
-                <li>Albuquerque,</li>
-                <li>New Mexico-87102.</li>
+                <li class="text-bold-800">Tên KH</li>
+                <li>địa chỉ</li>
+                <!-- <li>Albuquerque,</li>
+                <li>New Mexico-87102.</li> -->
               </ul>
             </div>
             <div class="col-6 text-right">
               <p>
-                <span class="text-muted">Invoice Date :</span> 06/05/2016</p>
+                <span class="text-muted">Ngày lập hóa đơn :</span> 06/05/2016</p>
               <p>
                 <span class="text-muted">Terms :</span> Due on Receipt</p>
               <p>
@@ -61,11 +61,11 @@
                 <table class="table">
                   <thead>
                     <tr>
-                      <th>#</th>
-                      <th>Item &amp; Description</th>
-                      <th class="text-right">Rate</th>
-                      <th class="text-right">Hours</th>
-                      <th class="text-right">Amount</th>
+                      <th>Mã hóa đơn</th>
+                      <th>Item &amp; Tên sản phẩm</th>
+                      <th class="text-right">Trạng Thái</th>
+                      <th class="text-right">Số Lượng</th>
+                      <th class="text-right">Đơn giá</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -105,13 +105,13 @@
             </div>
             <div class="row">
               <div class="col-md-6 col-sm-12 text-left">
-                <p class="lead">Payment Methods:</p>
+                <p class="lead">Phương thức thanh toán:</p>
                 <div class="row">
                   <div class="col-12">
                     <table class="table table-borderless table-sm">
                       <tbody>
                         <tr>
-                          <td>Bank name:</td>
+                          <td>Tên ngân hàng:</td>
                           <td class="text-right">ABC Bank, USA</td>
                         </tr>
                         <tr>
@@ -132,7 +132,7 @@
                 </div>
               </div>
               <div class="col-md-6 col-sm-12">
-                <p class="lead">Total due</p>
+                <p class="lead">Tổng tiền</p>
                 <div class="table-responsive">
                   <table class="table">
                     <tbody>
@@ -141,7 +141,7 @@
                         <td class="text-right">$ 14,900.00</td>
                       </tr>
                       <tr>
-                        <td>TAX (12%)</td>
+                        <td>Thuế (12%)</td>
                         <td class="text-right">$ 1,788.00</td>
                       </tr>
                       <tr>
@@ -160,7 +160,7 @@
                   </table>
                 </div>
                 <div class="text-center">
-                  <p>Authorized person</p>
+                  <p>Kí Tên</p>
                   <img src="../assets/app-assets/img/pages/signature-scan.png" alt="signature" class="width-250">
                   <h6>Amanda Orton</h6>
                   <p class="text-muted">Managing Director</p>
@@ -178,7 +178,7 @@
               </div>
               <div class="col-md-3 col-sm-12 text-center">
                 <button type="button" class="btn btn-primary btn-raised my-1">
-                  <i class="fa fa-paper-plane-o"></i> Send Invoice</button>
+                  <i class="fa fa-paper-plane-o"></i> Gửi hóa đơn</button>
               </div>
             </div>
           </div>
