--- a/ShoesAdmin/src/app/components/table-hoadon/table-hoadon.component.html
+++ b/ShoesAdmin/src/app/components/table-hoadon/table-hoadon.component.html
@@ -1,372 +1,60 @@
 <div class="content-wrapper">
-  <!-- Row selection (multiple rows) table -->
-  <section id="row-selection">
+    <!--Extended Table starts-->
     <div class="row">
-      <div class="col-12">
-        <div class="card">
-          <div class="card-header">
-            <h4 class="card-title">THÔNG TIN HÓA ĐƠN HÀNG</h4>
-          </div>
-          <div class="card-body collapse show">
-            <div class="card-block">
-              <!-- <button id="addRow" class="btn btn-primary mb-2">
-                <i class="ft-plus"></i>&nbsp; Thêm Hóa Đơn mới</button>
-              <br/>
-              <br/> -->
-              <table class="table table-striped table-bordered selection-multiple-rows">
-                <thead>
-                  <tr>
-                    <th>Name</th>
-                    <th>Position</th>
-                    <th>Office</th>
-                    <th>Age</th>
-                    <th>Start date</th>
-                    <th>Salary</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>Tiger Nixon</td>
-                    <td>System Architect</td>
-                    <td>Edinburgh</td>
-                    <td>61</td>
-                    <td>2011/04/25</td>
-                    <td>$320,800</td>
-                  </tr>
-                  <tr>
-                    <td>Garrett Winters</td>
-                    <td>Accountant</td>
-                    <td>Tokyo</td>
-                    <td>63</td>
-                    <td>2011/07/25</td>
-                    <td>$170,750</td>
-                  </tr>
-                  <tr>
-                    <td>Ashton Cox</td>
-                    <td>Junior Technical Author</td>
-                    <td>San Francisco</td>
-                    <td>66</td>
-                    <td>2009/01/12</td>
-                    <td>$86,000</td>
-                  </tr>
-                  <tr>
-                    <td>Cedric Kelly</td>
-                    <td>Senior Javascript Developer</td>
-                    <td>Edinburgh</td>
-                    <td>22</td>
-                    <td>2012/03/29</td>
-                    <td>$433,060</td>
-                  </tr>
-                  <tr>
-                    <td>Airi Satou</td>
-                    <td>Accountant</td>
-                    <td>Tokyo</td>
-                    <td>33</td>
-                    <td>2008/11/28</td>
-                    <td>$162,700</td>
-                  </tr>
-                </tbody>
-                <tfoot>
-                  <tr>
-                    <th>Name</th>
-                    <th>Position</th>
-                    <th>Office</th>
-                    <th>Age</th>
-                    <th>Start date</th>
-                    <th>Salary</th>
-                  </tr>
-                </tfoot>
-              </table>
-            </div>
-          </div>
+        <div class="col-12">
+            <div class="content-header">THÔNG TIN HÓA ĐƠN</div>
         </div>
-      </div>
     </div>
-  </section>
-  <!--/ Row selection (multiple rows) table -->
-  <!-- Form inputs table -->
-  <section id="form-inputs">
-    <div class="row">
-      <div class="col-12">
-        <div class="card">
-          <div class="card-header">
-            <h4 class="card-title">NHẬP THÔNG TIN SẢN PHẨM</h4>
-          </div>
-          <div class="card-body collapse show">
-            <div class="card-block">
-              <button class="btn btn-primary mr-1 inputs-submin">
-                <i class="ft-file"></i>&nbsp; Thêm mới Hóa đơn</button>
-              <br/>
-              <br/>
-              <table class="table table-striped table-bordered submit-form-inputs">
-                <thead>
-                  <tr>
-                    <th>Name</th>
-                    <th>Age</th>
-                    <th>Position</th>
-                    <th>Office</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>Tiger Nixon</td>
-                    <td>
-                      <input type="text" id="row-1-age" name="row-1-age" value="61">
-                    </td>
-                    <td>
-                      <input type="text" id="row-1-position" name="row-1-position" value="System Architect">
-                    </td>
-                    <td>
-                      <select size="1" id="row-1-office" name="row-1-office">
-                        <option value="Edinburgh" selected="selected">
-                          Edinburgh
-                        </option>
-                        <option value="London">
-                          London
-                        </option>
-                        <option value="New York">
-                          New York
-                        </option>
-                        <option value="San Francisco">
-                          San Francisco
-                        </option>
-                        <option value="Tokyo">
-                          Tokyo
-                        </option>
-                      </select>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>Garrett Winters</td>
-                    <td>
-                      <input type="text" id="row-2-age" name="row-2-age" value="63">
-                    </td>
-                    <td>
-                      <input type="text" id="row-2-position" name="row-2-position" value="Accountant">
-                    </td>
-                    <td>
-                      <select size="1" id="row-2-office" name="row-2-office">
-                        <option value="Edinburgh">
-                          Edinburgh
-                        </option>
-                        <option value="London">
-                          London
-                        </option>
-                        <option value="New York">
-                          New York
-                        </option>
-                        <option value="San Francisco">
-                          San Francisco
-                        </option>
-                        <option value="Tokyo" selected="selected">
-                          Tokyo
-                        </option>
-                      </select>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>Michael Bruce</td>
-                    <td>
-                      <input type="text" id="row-56-age" name="row-56-age" value="29">
-                    </td>
-                    <td>
-                      <input type="text" id="row-56-position" name="row-56-position" value="Javascript Developer">
-                    </td>
-                    <td>
-                      <select size="1" id="row-56-office" name="row-56-office">
-                        <option value="Edinburgh">
-                          Edinburgh
-                        </option>
-                        <option value="London">
-                          London
-                        </option>
-                        <option value="New York">
-                          New York
-                        </option>
-                        <option value="San Francisco">
-                          San Francisco
-                        </option>
-                        <option value="Tokyo">
-                          Tokyo
-                        </option>
-                      </select>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>Donna Snider</td>
-                    <td>
-                      <input type="text" id="row-57-age" name="row-57-age" value="27">
-                    </td>
-                    <td>
-                      <input type="text" id="row-57-position" name="row-57-position" value="Customer Support">
-                    </td>
-                    <td>
-                      <select size="1" id="row-57-office" name="row-57-office">
-                        <option value="Edinburgh">
-                          Edinburgh
-                        </option>
-                        <option value="London">
-                          London
-                        </option>
-                        <option value="New York" selected="selected">
-                          New York
-                        </option>
-                        <option value="San Francisco">
-                          San Francisco
-                        </option>
-                        <option value="Tokyo">
-                          Tokyo
-                        </option>
-                      </select>
-                    </td>
-                  </tr>
-                </tbody>
-                <tfoot>
-                  <tr>
-                    <th>Name</th>
-                    <th>Age</th>
-                    <th>Position</th>
-                    <th>Office</th>
-                  </tr>
-                </tfoot>
-              </table>
+    <section id="extended">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="card">
+                    <div class="card-header">
+                        <h4 class="card-title">Hóa Đơn</h4>
+                    </div>
+                    <div class="card-body">
+                        <div class="card-block">
+                            <table id="table_sp" class="table table-responsive-md-md text-center">
+                                <thead>
+                                    <tr>
+                                        <th>No.ID</th>
+                                        <th>Tên khách hàng</th>
+                                        <th>Tên nhân viên</th>
+                                        <th>Ngày</th>
+                                        <th>Trạng Thái</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr *ngFor= "let hd of list_hd">
+                                        <td>{{hd.id}}</td>
+                                        <td>{{hd.tenKhachHang}}</td>
+                                        <td>{{hd.tenNhanVien}}</td>
+                                        <td>{{hd.ngay}}</td>
+                                        <td>
+                                            <button type="button" class="btn btn-raised btn-warning btn-min-width mr-1 mb-1">Cancel</button>
+                                            <button type="button" class="btn btn-raised btn-danger btn-min-width mr-1 mb-1">In_progress</button>
+                                            <button type="button" class="btn btn-raised btn-success btn-min-width mr-1 mb-1">Done</button>
+                                        </td>
+                                        <td>
+                                            <a class="info p-0" data-original-title="" title="">
+                                                <i class="ft-user font-medium-3 mr-2"></i>
+                                            </a>
+                                            <a class="success p-0" data-original-title="" title="">
+                                                <i class="ft-edit-2 font-medium-3 mr-2"></i>
+                                            </a>
+                                            <a class="danger p-0" data-original-title="" title="">
+                                                <i class="ft-x font-medium-3 mr-2"></i>
+                                            </a>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
-    </div>
-  </section>
-  <!--/ Form inputs table -->
-
-  <!--/ Show & hide columns dynamically table -->
-  <!-- Search API (regular expressions) table -->
-  <section id="search-api">
-    <div class="row">
-      <div class="col-12">
-        <div class="card">
-          <div class="card-header">
-            <h4 class="card-title">Xuất thông tin hóa đơn</h4>
-          </div>
-          <div class="card-body collapse show">
-            <div class="card-block">
-              <button id="Searchproduct" class="btn btn-primary mb-2">
-                <i class="ft-plus"></i>&nbsp; In Hóa Đơn</button>
-              <br/>
-              <br/>
-              <!-- <table style="margin: 0 auto 2em auto;" class="table table-striped table-bordered search-api">
-                <thead>
-                  <tr>
-                    <th>Target</th>
-                    <th>Search text</th>
-                    <th>Treat as regex</th>
-                    <th>Use smart search</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr id="filter_global">
-                    <td>Global search</td>
-                    <td class="text-center">
-                      <input type="text" class="global_filter_search" id="global_filter_search">
-                    </td>
-                    <td class="text-center">
-                      <input type="checkbox" class="global_filter_search" id="global_regex">
-                    </td>
-                    <td class="text-center">
-                      <input type="checkbox" class="global_filter_search" id="global_smart" checked="checked">
-                    </td>
-                  </tr>
-                  <tr id="filter_col1" data-column="0">
-                    <td>Column - Name</td>
-                    <td class="text-center">
-                      <input type="text" class="column_filter_search" id="col0_filter">
-                    </td>
-                    <td class="text-center">
-                      <input type="checkbox" class="column_filter_search" id="col0_regex">
-                    </td>
-                    <td class="text-center">
-                      <input type="checkbox" class="column_filter_search" id="col0_smart" checked="checked">
-                    </td>
-                  </tr>
-                </tbody>
-              </table> -->
-              <table class="display table table-striped table-bordered search-api">
-                <thead>
-                  <tr>
-                    <th>Name</th>
-                    <th>Position</th>
-                    <th>Office</th>
-                    <th>Age</th>
-                    <th>Start date</th>
-                    <th>Salary</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>Tiger Nixon</td>
-                    <td>System Architect</td>
-                    <td>Edinburgh</td>
-                    <td>61</td>
-                    <td>2011/04/25</td>
-                    <td>$320,800</td>
-                  </tr>
-                  <tr>
-                    <td>Garrett Winters</td>
-                    <td>Accountant</td>
-                    <td>Tokyo</td>
-                    <td>63</td>
-                    <td>2011/07/25</td>
-                    <td>$170,750</td>
-                  </tr>
-                  <tr>
-                    <td>Ashton Cox</td>
-                    <td>Junior Technical Author</td>
-                    <td>San Francisco</td>
-                    <td>66</td>
-                    <td>2009/01/12</td>
-                    <td>$86,000</td>
-                  </tr>
-                  <tr>
-                    <td>Cedric Kelly</td>
-                    <td>Senior Javascript Developer</td>
-                    <td>Edinburgh</td>
-                    <td>22</td>
-                    <td>2012/03/29</td>
-                    <td>$433,060</td>
-                  </tr>
-                  <tr>
-                    <td>Airi Satou</td>
-                    <td>Accountant</td>
-                    <td>Tokyo</td>
-                    <td>33</td>
-                    <td>2008/11/28</td>
-                    <td>$162,700</td>
-                  </tr>
-                  <tr>
-                    <td>Brielle Williamson</td>
-                    <td>Integration Specialist</td>
-                    <td>New York</td>
-                    <td>61</td>
-                    <td>2012/12/02</td>
-                    <td>$372,000</td>
-                  </tr>
-                </tbody>
-                <tfoot>
-                  <tr>
-                    <th>Name</th>
-                    <th>Position</th>
-                    <th>Office</th>
-                    <th>Age</th>
-                    <th>Start date</th>
-                    <th>Salary</th>
-                  </tr>
-                </tfoot>
-              </table>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!--/ Search API (regular expressions) table -->
-
+    </section>
+    <!--Extended Table Ends-->
 </div>
