--- a/ShoesAdmin/src/app/components/table-kho/table-kho.component.html
+++ b/ShoesAdmin/src/app/components/table-kho/table-kho.component.html
@@ -5,7 +5,7 @@
       <div class="col-12">
         <div class="card">
           <div class="card-header">
-            <h4 class="card-title">THÔNG TIN SẢN PHẨM TRONG KHO HÀNG</h4>
+            <h4 class="card-title">KHO HÀNG</h4>
           </div>
           <div class="card-body collapse show">
             <div class="card-block">
@@ -13,69 +13,34 @@
                 <i class="ft-plus"></i>&nbsp; Thêm sản phẩm mới</button>
               <br/>
               <br/>
-              <table class="table table-striped table-bordered selection-multiple-rows">
+              <table id="table_spkho" class="table table-striped table-bordered selection-multiple-rows">
                 <thead>
                   <tr>
-                    <th>Name</th>
-                    <th>Position</th>
-                    <th>Office</th>
-                    <th>Age</th>
-                    <th>Start date</th>
-                    <th>Salary</th>
+                    <th>No.ID</th>
+                    <th>Tên Kho</th>
+                    <th>Địa Chỉ</th>
+                    <th>Action</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <td>Tiger Nixon</td>
-                    <td>System Architect</td>
-                    <td>Edinburgh</td>
-                    <td>61</td>
-                    <td>2011/04/25</td>
-                    <td>$320,800</td>
-                  </tr>
-                  <tr>
-                    <td>Garrett Winters</td>
-                    <td>Accountant</td>
-                    <td>Tokyo</td>
-                    <td>63</td>
-                    <td>2011/07/25</td>
-                    <td>$170,750</td>
-                  </tr>
-                  <tr>
-                    <td>Ashton Cox</td>
-                    <td>Junior Technical Author</td>
-                    <td>San Francisco</td>
-                    <td>66</td>
-                    <td>2009/01/12</td>
-                    <td>$86,000</td>
-                  </tr>
-                  <tr>
-                    <td>Cedric Kelly</td>
-                    <td>Senior Javascript Developer</td>
-                    <td>Edinburgh</td>
-                    <td>22</td>
-                    <td>2012/03/29</td>
-                    <td>$433,060</td>
-                  </tr>
-                  <tr>
-                    <td>Airi Satou</td>
-                    <td>Accountant</td>
-                    <td>Tokyo</td>
-                    <td>33</td>
-                    <td>2008/11/28</td>
-                    <td>$162,700</td>
+                  <tr *ngFor="let kho of list_spkho">
+                    <td>{{kho.id}}</td>
+                    <td>{{kho.tenKho}}</td>
+                    <td>{{kho.diaChi}}</td>
+                    <td>
+
+                      <a class="success p-0" data-original-title="" title="" [routerLink]="['/kho/',kho.id]">
+                        <i class="ft-list font-medium-3 mr-2"></i>
+                      </a>
+                      <a class="success p-0" data-original-title="" title="">
+                        <i class="ft-edit-2 font-medium-3 mr-2"></i>
+                      </a>
+                      <a class="danger p-0" data-original-title="" title="">
+                        <i class="ft-x font-medium-3 mr-2"></i>
+                      </a>
+                    </td>
                   </tr>
                 </tbody>
-                <tfoot>
-                  <tr>
-                    <th>Name</th>
-                    <th>Position</th>
-                    <th>Office</th>
-                    <th>Age</th>
-                    <th>Start date</th>
-                    <th>Salary</th>
-                  </tr>
-                </tfoot>
               </table>
             </div>
           </div>
@@ -86,7 +51,7 @@
   <!--/ Row selection (multiple rows) table -->
   <!--/ Show & hide columns dynamically table -->
   <!-- Search API (regular expressions) table -->
-  <section id="search-api">
+  <!-- <section id="search-api">
     <div class="row">
       <div class="col-12">
         <div class="card">
@@ -212,7 +177,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!--/ Search API (regular expressions) table -->
 
 </div>
