--- a/ShoesAdmin/src/app/components/invoice/invoice.component.html
+++ b/ShoesAdmin/src/app/components/invoice/invoice.component.html
@@ -62,8 +62,8 @@
                   <thead>
                     <tr>
                       <th>Mã hóa đơn</th>
-                      <th>Item &amp; Tên sản phẩm</th>
-                      <th class="text-right">Trạng Thái</th>
+                      <th>Tên sản phẩm</th>
+                      <th class="text-right">Chiết khấu</th>
                       <th class="text-right">Số Lượng</th>
                       <th class="text-right">Đơn giá</th>
                     </tr>
@@ -115,15 +115,15 @@
                           <td class="text-right">ABC Bank, USA</td>
                         </tr>
                         <tr>
-                          <td>Acc name:</td>
+                          <td>Tên Khách hàng:</td>
                           <td class="text-right">Amanda Orton</td>
                         </tr>
-                        <tr>
-                          <td>IBAN:</td>
+                        <!-- <tr>
+                          <td>Ngày:</td>
                           <td class="text-right">FGS165461646546AA</td>
-                        </tr>
+                        </tr> -->
                         <tr>
-                          <td>SWIFT code:</td>
+                          <td>Nội dung:</td>
                           <td class="text-right">BTNPP34</td>
                         </tr>
                       </tbody>
@@ -132,30 +132,30 @@
                 </div>
               </div>
               <div class="col-md-6 col-sm-12">
-                <p class="lead">Tổng tiền</p>
+                <p class="lead">Hóa đơn thanh toán</p>
                 <div class="table-responsive">
                   <table class="table">
                     <tbody>
                       <tr>
-                        <td>Sub Total</td>
+                        <td>Tổng tiền sản phẩm</td>
                         <td class="text-right">$ 14,900.00</td>
                       </tr>
                       <tr>
-                        <td>Thuế (12%)</td>
+                        <td>Chiết khấu (12%)</td>
                         <td class="text-right">$ 1,788.00</td>
                       </tr>
                       <tr>
-                        <td class="text-bold-800">Total</td>
+                        <td class="text-bold-800">Tổng tiền thanh toán</td>
                         <td class="text-bold-800 text-right"> $ 16,688.00</td>
                       </tr>
-                      <tr>
+                      <!-- <tr>
                         <td>Payment Made</td>
                         <td class="pink text-right">(-) $ 4,688.00</td>
                       </tr>
                       <tr class="bg-grey bg-lighten-4">
                         <td class="text-bold-800">Balance Due</td>
                         <td class="text-bold-800 text-right">$ 12,000.00</td>
-                      </tr>
+                      </tr> -->
                     </tbody>
                   </table>
                 </div>
@@ -172,7 +172,7 @@
           <div id="invoice-footer">
             <div class="row">
               <div class="col-md-9 col-sm-12">
-                <h6>Terms &amp; Condition</h6>
+                <h6>Lưu ý:</h6>
                 <p>You know, being a test pilot isn't always the healthiest business in the world. We predict too much for the
                   next year and yet far too little for the next 10.</p>
               </div>
