--- a/ShoesAdmin/src/app/components/table-kho/table-kho.component.html
+++ b/ShoesAdmin/src/app/components/table-kho/table-kho.component.html
@@ -10,7 +10,7 @@
           <div class="card-body collapse show">
             <div class="card-block">
               <button id="addRow" class="btn btn-primary mb-2">
-                <i class="ft-plus"></i>&nbsp; Thêm sản phẩm mới</button>
+                <i class="ft-plus"></i>&nbsp; Thêm kho hàng mới</button>
               <br/>
               <br/>
               <table id="table_spkho" class="table table-striped table-bordered selection-multiple-rows">
