--- a/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/table-sanpham/table-sanpham.component.html
@@ -62,7 +62,7 @@
   </section>
   <!--Extended Table Ends-->
   <!--Shopping cart starts-->
-  <section id="shopping-cart">
+  <!-- <section id="shopping-cart">
       <div class="row">
           <div class="col-sm-12">
               <div class="card">
@@ -204,6 +204,6 @@
               </div>
           </div>
       </div>
-  </section>
+  </section> -->
   <!--Shopping cart ends-->
 </div>
