--- a/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
@@ -5,34 +5,107 @@
       <div class="col-sm-12 mt-2">
         <div class="content-header">Thông tin chi tiết sản phẩm</div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-12 mt-1 mb-1">
-          <h4> Tên sản phẩm:</h4>
-        <h4> Chi tiết:</h4>
-      </div>
-    </div>
-    <div class="row">
-        <div class="col-12 mt-1 mb-1">
-            <label class=""><h4>Giới Tính:</h4></label>
-            <div class="custom-control custom-radio display-inline-block ml-1">
-                <input type="radio" id="customRadioInline2" name="customRadioInline2" class="custom-control-input">
-                <label class="custom-control-label" for="customRadioInline2">Nam</label>
+
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <div class="px-3">
+              <form class="form">
+                <div class="form-body">
+                  <h4 class="form-section">
+                    <i class="ft-user"></i> Mã sản phẩm:</h4>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="form-group">
+                        <label for="projectinput1">Tên sản phẩm</label>
+                        <input type="text" id="projectinput1" class="form-control" name="fname">
+                      </div>
+                    </div>
+                    <!-- <div class="col-md-6">
+                        <div class="form-group">
+                          <label for="projectinput2">Nhà sản xuất</label>
+                          <input type="text" id="projectinput2" class="form-control"  name="lname">
+                        </div>
+                      </div> -->
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="form-group">
+                        <label for="projectinput3">Nhà sản xuất</label>
+                        <input type="text" id="projectinput3" class="form-control" name="email">
+                      </div>
+                    </div>
+                   
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="form-group">
+                        <label for="projectinput4">Kích thước</label>
+                        <input type="text" id="projectinput4" class="form-control" name="phone">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="projectinput8">Mô tả</label>
+                    <textarea id="projectinput8" rows="5" class="form-control" name="comment"></textarea>
+                  </div>
+                </div>
+
+              </form>
             </div>
-            <div class="custom-control custom-radio display-inline-block">
-                <input type="radio" id="customRadioInline3" checked name="customRadioInline2" class="custom-control-input">
-                <label class="custom-control-label" for="customRadioInline3">Nữ</label>
-            </div>
-        </div>
-      </div>
-      <div class="row">
-          <div class="col-12 mt-1 mb-1">
-              <h4> Loại giày:</h4>
           </div>
         </div>
+      </div>
+
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <div class="px-3">
+
+              <form class="form">
+                <div class="form-body">
+                  <h4 class="form-section">
+                    <i class="ft-info"></i> Hình ảnh</h4>
+                  <div class="row">
+                  </div>
+                </div>
+                        <div id="carousel-keyboard" class="carousel slide" data-ride="carousel" data-keyboard="false">
+                          <ol class="carousel-indicators">
+                            <li data-target="#carousel-keyboard" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-keyboard" data-slide-to="1"></li>
+                            <li data-target="#carousel-keyboard" data-slide-to="2"></li>
+                          </ol>
+                          <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active">
+                              <img src="../assets/app-assets/img/photos/11.jpg" alt="First slide">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="../assets/app-assets/img/photos/06.jpg" alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                              <img src="../assets/app-assets/img/photos/01.jpg" alt="Third slide">
+                            </div>
+                          </div>
+                          <a class="carousel-control-prev" href="#carousel-keyboard" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                          </a>
+                          <a class="carousel-control-next" href="#carousel-keyboard" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                          </a>
+                  </div>
+              </form>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <br>
     <div class="row">
-      <div class="col-12 mt-1 mb-1">
-          <h4> Kho hàng:</h4>
+      <div class="extended">
+        <h4> Kho hàng:</h4>
       </div>
     </div>
     <div class="row">
@@ -61,92 +134,5 @@
       </div>
     </div>
   </section>
-  <!-- Basic Carousel end -->
-  <!-- Carousel Options start -->
-  <div class="row">
-      <div class="col-12 mt-1 mb-1">
-          <h4> Hình ảnh:</h4>
-      </div>
-    </div>
-  <section id="carousel-options">
-    <div class="row">
-      <div class="col-md-6 col-sm-12">
-        <div class="card">
-          <!-- <div class="card-header">
-            <h4 class="card-title">Số lượng: </h4>
-          </div> -->
-          <div class="card-body">
-            <div class="card-block">
-              <!-- <p>Loại: </p> -->
-              <div id="carousel-wrap" class="carousel slide" data-ride="carousel" data-wrap="false">
-                <ol class="carousel-indicators">
-                  <li data-target="#carousel-wrap" data-slide-to="0" class="active"></li>
-                  <li data-target="#carousel-wrap" data-slide-to="1"></li>
-                  <li data-target="#carousel-wrap" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner" role="listbox">
-                  <div class="carousel-item active">
-                    <img src="../assets/app-assets/img/photos/02.jpg" alt="First slide">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="../assets/app-assets/img/photos/04.jpg" alt="Second slide">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="../assets/app-assets/img/photos/08.jpg" alt="Third slide">
-                  </div>
-                </div>
-                <a class="carousel-control-prev" href="#carousel-wrap" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carousel-wrap" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 col-sm-12">
-        <div class="card">
-          <!-- <div class="card-header">
-            <h4 class="card-title">Đơn Giá:</h4>
-          </div> -->
-          <div class="card-body">
-            <div class="card-block">
-              <!-- <p>Kich thước: </p> -->
-              <div id="carousel-keyboard" class="carousel slide" data-ride="carousel" data-keyboard="false">
-                <ol class="carousel-indicators">
-                  <li data-target="#carousel-keyboard" data-slide-to="0" class="active"></li>
-                  <li data-target="#carousel-keyboard" data-slide-to="1"></li>
-                  <li data-target="#carousel-keyboard" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner" role="listbox">
-                  <div class="carousel-item active">
-                    <img src="../assets/app-assets/img/photos/11.jpg" alt="First slide">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="../assets/app-assets/img/photos/06.jpg" alt="Second slide">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="../assets/app-assets/img/photos/01.jpg" alt="Third slide">
-                  </div>
-                </div>
-                <a class="carousel-control-prev" href="#carousel-keyboard" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carousel-keyboard" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- Carousel Options end -->
+
 </div>
