--- a/karl-shop/src/app/components/products/products.component.html
+++ b/karl-shop/src/app/components/products/products.component.html
@@ -22,7 +22,7 @@
               <div class="product-description">
                 <h4 class="product-price">{{pro.hangTrongKho[0].donGia | currency: 'VNĐ' : 'code' : '1.0'}}</h4>
                 <p [routerLink]="['/home/detail', pro.id]">{{pro.tenSanPham}}</p>
-                <a href="#" class="add-to-cart-btn">Thêm vào giỏ hàng</a>
+                <a href="" class="add-to-cart-btn">Thêm vào giỏ hàng</a>
               </div>
             </div>
           </div>
