--- a/karl-shop/src/app/components/side-bar/side-bar.component.html
+++ b/karl-shop/src/app/components/side-bar/side-bar.component.html
@@ -44,7 +44,7 @@
           </div>
         </div>
 
-        <div class="widget color mb-70">
+        <!-- <div class="widget color mb-70">
           <h6 class="widget-title mb-30">Lọc theo màu sắc</h6>
           <div class="widget-desc">
             <ul class="d-flex justify-content-between">
@@ -80,7 +80,7 @@
               </li>
             </ul>
           </div>
-        </div>
+        </div> -->
 
         <div class="widget size mb-50">
           <h6 class="widget-title mb-30">Lọc theo kích cỡ</h6>
