--- a/karl-shop/src/app/admin/admin.component.html
+++ b/karl-shop/src/app/admin/admin.component.html
@@ -11,7 +11,7 @@
         <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
       </mat-form-field>
       <div class="button-row">
-        <button mat-raised-button color="primary" class="btnLogin">Đăng nhập</button>
+        <button mat-raised-button color="primary" class="btnLogin" (click)="demo()">Đăng nhập</button>
       </div>
       <small>Quên mật khẩu ?</small>
     </div>
