--- a/karl-shop/src/app/components/product-detail/product-detail.component.html
+++ b/karl-shop/src/app/components/product-detail/product-detail.component.html
@@ -70,7 +70,7 @@
             <div class="widget-desc">
               <ul>
                 <li *ngFor="let size of _detailProduct.kichThuoc">
-                  <a href="#">{{size.tenKichThuoc}}</a>
+                  <a (click)="selectSize(size)">{{size.tenKichThuoc}}</a>
                 </li>
               </ul>
             </div>
@@ -78,7 +78,7 @@
 
           <!-- Add to Cart Form -->
           <form class="cart clearfix mb-50 d-flex" method="post">
-            <div class="quantity">
+            <!-- <div class="quantity">
               <span class="qty-minus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 1 ) effect.value--;return false;">
                 <i class="fa fa-minus" aria-hidden="true"></i>
               </span>
@@ -86,7 +86,7 @@
               <span class="qty-plus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty )) effect.value++;return false;">
                 <i class="fa fa-plus" aria-hidden="true"></i>
               </span>
-            </div>
+            </div> -->
             <button type="submit" name="addtocart" value="5" class="btn cart-submit d-block">Thêm vào giỏ hàng</button>
           </form>
 
