update get list products before transfer to cart

--- a/karl-shop/src/app/components/product-detail/product-detail.component.html
+++ b/karl-shop/src/app/components/product-detail/product-detail.component.html
@@ -87,7 +87,7 @@
                 <i class="fa fa-plus" aria-hidden="true"></i>
               </span>
             </div> -->
-            <button type="submit" name="addtocart" value="5" class="btn cart-submit d-block">Thêm vào giỏ hàng</button>
+            <button (click)="addToCart()" name="addtocart" value="5" class="btn cart-submit d-block">Thêm vào giỏ hàng</button>
           </form>
 
           <div id="accordion" role="tablist">
