--- a/karl-shop/src/app/components/cart/cart.component.html
+++ b/karl-shop/src/app/components/cart/cart.component.html
@@ -6,15 +6,23 @@
         <div class="cart-table clearfix">
           <table class="table table-responsive">
             <thead>
-              <tr>
+              <!-- <tr>
                 <th>Sản phẩm</th>
                 <th>Giá</th>
+                <th>Số lượng</th>
+                <th>Tổng</th>
+              </tr> -->
+              <tr>
+                <th>Sản phẩm</th>
+                <th>Kích thước</th>
+                <th>Giá</th>
+                <th>Chiết khấu</th>
                 <th>Số lượng</th>
                 <th>Tổng</th>
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <!-- <tr>
                 <td class="cart_product_img d-flex align-items-center">
                   <a href="#">
                     <img src="../assets/images/product-img/product-9.jpg" alt="Product">
@@ -37,6 +45,37 @@
                 </td>
                 <td class="total_price">
                   <span>$399</span>
+                </td>
+              </tr> -->
+              <tr *ngFor="let pro of _productInCart">
+                <td class="cart_product_img d-flex align-items-center">
+                  <a href="#">
+                    <img src="{{ pro.hinhSanPham }}" alt="Product">
+                  </a>
+                  <h6>{{ pro.tenSanPham }}</h6>
+                </td>
+                <td>
+                  <span>{{ pro.tenKichThuoc }}</span>
+                </td>
+                <td class="price">
+                  <span>{{ pro.donGia | currency:'VND'}}</span>
+                </td>
+                <td class="price">
+                  <span>{{ pro.chietKhau * 100 }}%</span>
+                </td>
+                <td class="qty">
+                  <div class="quantity">
+                    <span class="qty-minus" (click)="minusQuantity(pro.id,pro.tenKichThuoc,pro.soLuong)">
+                      <i class="fa fa-minus" aria-hidden="true"></i>
+                    </span>
+                    <input type="number" [(ngModel)]="pro.soLuong" class="qty-text" id="qty" step="1" min="1" max="99" name="quantity" value="1">
+                    <span class="qty-plus" (click)="plusQuantity(pro.id,pro.tenKichThuoc,pro.soLuong)">
+                      <i class="fa fa-plus" aria-hidden="true"></i>
+                    </span>
+                  </div>
+                </td>
+                <td class="total_price">
+                  <span>{{ pro.donGia * (1 - pro.chietKhau) * pro.soLuong | currency:'VND'}}</span>
                 </td>
               </tr>
             </tbody>
@@ -111,7 +150,7 @@
           <ul class="cart-total-chart">
             <li>
               <span>Tiền sản phẩm</span>
-              <span>$59.90</span>
+              <span>{{ _sumOfMoney | currency:'VND' }}</span>
             </li>
             <li>
               <span>Tiền vận chuyển</span>
@@ -122,7 +161,7 @@
                 <strong>Tổng</strong>
               </span>
               <span>
-                <strong>$59.90</strong>
+                <strong>{{ _sumOfMoney | currency:'VND' }}</strong>
               </span>
             </li>
           </ul>
