--- a/karl-shop/src/app/components/product-detail/product-detail.component.css
+++ b/karl-shop/src/app/components/product-detail/product-detail.component.css
@@ -12,3 +12,10 @@
     box-sizing: border-box;
     padding: 5px;
 }
+li.sizes.actives {
+    background: #ff084e;
+    color: #fff;
+}
+/* li#ss37{
+    color: aquamarine !important;
+} */
