--- a/karl-shop/src/app/components/cart/cart.component.html
+++ b/karl-shop/src/app/components/cart/cart.component.html
@@ -6,12 +6,6 @@
         <div class="cart-table clearfix">
           <table class="table table-responsive">
             <thead>
-              <!-- <tr>
-                <th>Sản phẩm</th>
-                <th>Giá</th>
-                <th>Số lượng</th>
-                <th>Tổng</th>
-              </tr> -->
               <tr>
                 <th>Sản phẩm</th>
                 <th>Kích thước</th>
@@ -19,6 +13,7 @@
                 <th>Chiết khấu</th>
                 <th>Số lượng</th>
                 <th>Tổng</th>
+                <th></th>
               </tr>
             </thead>
             <tbody>
@@ -33,7 +28,7 @@
                   <span>{{ pro.tenKichThuoc }}</span>
                 </td>
                 <td class="price">
-                  <span>{{ pro.donGia | currency:'VND'}}</span>
+                  <span>{{ pro.donGia | number:'1.0'}} đ</span>
                 </td>
                 <td class="price">
                   <span>{{ pro.chietKhau * 100 }}%</span>
@@ -43,27 +38,37 @@
                     <span class="qty-minus" (click)="minusQuantity(pro.id,pro.tenKichThuoc,pro.soLuong)">
                       <i class="fa fa-minus" aria-hidden="true"></i>
                     </span>
-                    <input type="number" [(ngModel)]="pro.soLuong" class="qty-text" id="qty" step="1" min="1" max="99" name="quantity" value="1">
+                    <input type="number" disabled="all" [(ngModel)]="pro.soLuong" class="qty-text" id="qty" step="1" min="1" max="99" name="quantity"
+                      value="1">
                     <span class="qty-plus" (click)="plusQuantity(pro.id,pro.tenKichThuoc,pro.soLuong)">
                       <i class="fa fa-plus" aria-hidden="true"></i>
                     </span>
                   </div>
+                  <span class="quantityMax">Số lượng còn: {{pro.soLuongKho}}</span>
                 </td>
                 <td class="total_price">
-                  <span>{{ pro.donGia * (1 - pro.chietKhau) * pro.soLuong | currency:'VND'}}</span>
+                  <span>{{ pro.donGia * (1 - pro.chietKhau) * pro.soLuong | number:'1.0'}} đ</span>
+                </td>
+                <td class="btnRemove">
+                  <div class="removeProduct">
+                    <i class="far fa-trash-alt remove"></i>
+                  </div>
                 </td>
               </tr>
             </tbody>
           </table>
+
+
+
         </div>
 
         <div class="cart-footer d-flex mt-30">
           <div class="back-to-shop w-50">
-            <a href="shop-grid-left-sidebar.html">Tiếp tục mua sắm</a>
+            <a class="continue" routerLink="/home/products">Tiếp tục mua sắm</a>
           </div>
           <div class="update-checkout w-50 text-right">
-            <a href="#">Hủy đơn hàng</a>
-            <a class="cart-submit" (click)="updateCart()">Cập nhật đơn hàng</a>
+            <a class="destroy">Hủy đơn hàng</a>
+            <!-- <a class="cart-submit" (click)="updateCart()">Cập nhật đơn hàng</a> -->
           </div>
         </div>
 
@@ -71,61 +76,21 @@
     </div>
 
     <div class="row">
-      <div class="col-12 col-md-6 col-lg-4">
-        <div class="coupon-code-area mt-70">
-          <div class="cart-page-heading">
-            <h5>Mã ưu đãi</h5>
-            <p>Nhập mã ưu đãi của bạn</p>
-          </div>
-          <form action="#">
-            <input type="search" name="search" placeholder="#569ab15">
-            <button type="submit">OK</button>
-          </form>
-        </div>
+
+      <div class="col-lg-8">
+        <!-- push 8 -->
       </div>
-      <div class="col-12 col-md-6 col-lg-4">
-        <div class="shipping-method-area mt-70">
-          <div class="cart-page-heading">
-            <h5>Hình thức vận chuyển</h5>
-            <p>Chọn hình thức vận chuyển</p>
-          </div>
 
-          <div class="custom-control custom-radio mb-30">
-            <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
-            <label class="custom-control-label d-flex align-items-center justify-content-between" for="customRadio1">
-              <span>Cấp tốc</span>
-              <span>$4.99</span>
-            </label>
-          </div>
-
-          <div class="custom-control custom-radio mb-30">
-            <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
-            <label class="custom-control-label d-flex align-items-center justify-content-between" for="customRadio2">
-              <span>Tiêu chuẩn</span>
-              <span>$1.99</span>
-            </label>
-          </div>
-
-          <div class="custom-control custom-radio">
-            <input type="radio" id="customRadio3" name="customRadio" class="custom-control-input">
-            <label class="custom-control-label d-flex align-items-center justify-content-between" for="customRadio3">
-              <span>Tự đến lấy</span>
-              <span>Free</span>
-            </label>
-          </div>
-        </div>
-      </div>
       <div class="col-12 col-lg-4">
         <div class="cart-total-area mt-70">
           <div class="cart-page-heading">
             <h5>Hóa đơn</h5>
-            <!-- <p>Final info</p> -->
           </div>
 
           <ul class="cart-total-chart">
             <li>
               <span>Tiền sản phẩm</span>
-              <span>{{ _sumOfMoney | currency:'VND' }}</span>
+              <span>{{ _sumOfMoney | number:'1.0' }} đ</span>
             </li>
             <li>
               <span>Tiền vận chuyển</span>
@@ -136,14 +101,16 @@
                 <strong>Tổng</strong>
               </span>
               <span>
-                <strong>{{ _sumOfMoney | currency:'VND' }}</strong>
+                <strong>{{ _sumOfMoney | number:'1.0' }} đ</strong>
               </span>
             </li>
           </ul>
-          <a href="checkout.html" class="btn karl-checkout-btn">Tiến hành thanh toán</a>
+          <a routerLink="/home/checkout" class="btn karl-checkout-btn">Tiến hành thanh toán</a>
         </div>
       </div>
+
     </div>
+
   </div>
 </div>
 
