--- a/karl-shop/src/app/components/home/home.component.html
+++ b/karl-shop/src/app/components/home/home.component.html
@@ -90,61 +90,24 @@
               <div class="col-12 col-lg-7">
                 <div class="quickview_pro_des">
                   <h4 class="title">{{_detailArray.tenSanPham}}</h4>
-                  <div class="top_seller_product_rating mb-15">
-                    <i class="fa fa-star" aria-hidden="true"></i>
-                    <i class="fa fa-star" aria-hidden="true"></i>
-                    <i class="fa fa-star" aria-hidden="true"></i>
-                    <i class="fa fa-star" aria-hidden="true"></i>
-                    <i class="fa fa-star" aria-hidden="true"></i>
-                  </div>
-                  <h5 class="price">{{_detailArray.donGia | currency :'VNĐ':'code':'1.0'}}
-                    <span>$130</span>
+                  
+                  <h5 class="price">{{_detailArray.donGia | number :'1.0'}} đ
                   </h5>
                   <p>{{_detailArray.chiTiet}}</p>
                   <a [routerLink]="['/home/detail', _detailArray.id]">Xem chi tiết</a>
                 </div>
-                <!-- Add to Cart Form -->
-                <!-- <form class="cart" method="post">
-                  <div class="quantity">
-                    <span class="qty-minus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 1 ) effect.value--;return false;">
-                      <i class="fa fa-minus" aria-hidden="true"></i>
-                    </span>
 
-                    <input type="number" class="qty-text" id="qty" step="1" min="1" max="12" name="quantity" value="1">
-
-                    <span class="qty-plus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty )) effect.value++;return false;">
-                      <i class="fa fa-plus" aria-hidden="true"></i>
-                    </span>
-                  </div>
-                  <div class="modal_pro_wishlist">
-                    <a href="wishlist.html" target="_blank">
-                      <i class="ti-heart"></i>
-                    </a>
-                  </div>
-                  <div class="modal_pro_compare">
-                    <a href="compare.html" target="_blank">
-                      <i class="ti-stats-up"></i>
-                    </a>
-                  </div>
-                </form> -->
-
-                <div class="share_wf mt-30">
-                  <p>Chia sẽ ngay</p>
+                <!-- <div class="share_wf mt-30">
+                  <p>Chia sẻ ngay</p>
                   <div class="_icon">
-                    <a href="#">
-                      <i class="fa fa-facebook" aria-hidden="true"></i>
+                    <a class="btn btn-primary">
+                        <i class="fab fa-facebook-f" aria-hidden="true"></i>
                     </a>
-                    <a href="#">
-                      <i class="fa fa-twitter" aria-hidden="true"></i>
-                    </a>
-                    <a href="#">
-                      <i class="fa fa-pinterest" aria-hidden="true"></i>
-                    </a>
-                    <a href="#">
-                      <i class="fa fa-google-plus" aria-hidden="true"></i>
+                    <a class="btn btn-danger">
+                        <i class="fab fa-google-plus-g" aria-hidden="true"></i>
                     </a>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -169,7 +132,7 @@
 
   <div class="karl-projects-menu mb-100">
     <div class="text-center portfolio-menu">
-      <button class="btn active" data-filter="*">Tất Cả</button>
+      <!-- <button class="btn active" data-filter="*">Tất Cả</button>` -->
       <span class="" *ngFor="let loaigiay of _loaiGiayArray">
         <button class="btn" data-filter="" (click)="getProductByCate(loaigiay.tenLoai)">{{loaigiay.tenLoai}}</button>
       </span>
@@ -189,10 +152,16 @@
           </div>
         </div>
         <div class="product-description">
-          <h4 class="product-price">{{pro.donGia | currency:"VND" : 'code':'1.0'}}</h4>
+          <h5 class="product-price">{{pro.donGia | number:'1.0'}} đ</h5>
+          <h4 class="product-sale">{{pro.donGia * (1-pro.chietKhau) | number:'1.0'}} đ</h4>
           <p [routerLink]="['/home/detail', pro.id]">{{pro.tenSanPham}}</p>
           <!-- <a class="add-to-cart-btn" (click)="addCart(pro.id)" >Thêm vào giỏ hàng</a> -->
         </div>
+
+        <div class="sale">
+          <span>-{{pro.chietKhau * 100 | number: '1.0'}}%</span>
+        </div>
+
       </div>
     </div>
     <!-- Adidas Products -->
