--- a/karl-shop/src/app/components/product-detail/product-detail.component.html
+++ b/karl-shop/src/app/components/product-detail/product-detail.component.html
@@ -65,14 +65,14 @@
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
-            <i class="fa fa-star-o" aria-hidden="true"></i>
+            <i class="fa fa-star" aria-hidden="true"></i>
           </div>
 
           <div class="widget size mb-50">
             <h6 class="widget-title">Kích cỡ</h6>
             <div class="widget-desc">
               <ul>
-                <li *ngFor="let size of _detailProduct.kichThuoc">
+                <li id="ss{{size.tenKichThuoc}}" (click)="selectActive(size.tenKichThuoc)" class="sizes" *ngFor="let size of _detailProduct.kichThuoc">
                   <a (click)="selectSize(size)">{{size.tenKichThuoc}}</a>
                 </li>
               </ul>
@@ -90,7 +90,7 @@
                 <i class="fa fa-plus" aria-hidden="true"></i>
               </span>
             </div> -->
-            <button (click)="addToCart()" name="addtocart" value="5" class="btn cart-submit d-block">Thêm vào giỏ hàng</button>
+            <button (click)="addToCart()" name="addtocart" value="5" class="btn cart-submit d-block">Mua hàng</button>
           </form>
 
           <div id="accordion" role="tablist">
