--- a/karl-shop/src/app/components/header/header.component.html
+++ b/karl-shop/src/app/components/header/header.component.html
@@ -152,6 +152,7 @@
           <div class="help-line">
             <a href="tel:+346573556778">
               <i class="ti-headphone-alt"></i> +84 090 3556 778</a>
+              <!-- <img src="" alt=""> -->
           </div>
         </div>
       </div>
