--- a/karl-shop/src/app/components/products/products.component.html
+++ b/karl-shop/src/app/components/products/products.component.html
@@ -20,9 +20,9 @@
                 </div>
               </div>
               <div class="product-description">
-                <h4 class="product-price">{{pro.hangTrongKho[0].donGia | currency: 'VNĐ' : 'code' : '1.0'}}</h4>
+                <h5 class="product-price">{{pro.donGia | number:'1.0'}} đ</h5>
+                <h4 class="product-sale">{{pro.donGia * (1-pro.chietKhau) | number:'1.0'}} đ</h4>
                 <p [routerLink]="['/home/detail', pro.id]">{{pro.tenSanPham}}</p>
-                <a href="" class="add-to-cart-btn">Thêm vào giỏ hàng</a>
               </div>
             </div>
           </div>
